--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -54,11 +54,13 @@
   display: inline-block;
   font-size: small;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
+  padding: 0.8em 0.7em 0.8em 0.7em;
   background-color: #405061;
-  line-height: 1em;
+  line-height: 0em;
   margin-right: 0.8em;
+  margin-bottom: 0.8em;
   border-radius: 4px 0 0 4px;
+  text-align: center;
 }
 
 .heroes .name {
