--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
+<!-- router outlet displays dashboard as "/" route -->
 <router-outlet></router-outlet>
 <app-messages></app-messages>
