--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,7 +20,7 @@ button {
   font-family: Cambria, Georgia, serif;
 }
 button {
-  background-color: #eee;
+  /* background-color: #eee;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -29,11 +29,11 @@ button {
   padding: 1rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
-  margin-top: 1rem;
+  margin-top: 1rem; */
 }
 button:hover {
-  background-color: black;
-  color: white;
+  /* background-color: black;
+  color: white; */
 }
 button:disabled {
   background-color: #eee;
@@ -51,19 +51,19 @@ h1 {
   margin-bottom: 0;
 }
 nav a {
-  padding: 1rem;
+  /* padding: 1rem;
   text-decoration: none;
   margin-top: 10px;
   display: inline-block;
   background-color: #e8e8e8;
   color: #3d3d3d;
-  border-radius: 4px;
+  border-radius: 4px; */
 }
 
 nav a:hover {
-  color: white;
-  background-color: #42545c;
+  /* color: white;
+  background-color: #42545c; */
 }
 nav a:active {
-  background-color: black;
+  /* background-color: black; */
 }
