--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>{{ title }}</h1>
-<nav>
+<div  class="flex">
+  <h1>{{ title }}</h1>
+</div>
+<nav class="flex justify-around items-center flex-col md:flex-row">
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
