--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -8,18 +8,18 @@ input {
   padding: 0.5rem;
 }
 button {
-  margin-top: 20px;
+  /* margin-top: 20px;
   margin-right: 0.5rem;
   background-color: #eee;
   padding: 1rem;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 1rem; */
 }
 button:hover {
-  background-color: #cfd8dc;
+  /* background-color: #cfd8dc; */
 }
 button:disabled {
-  background-color: #eee;
+  /* background-color: #eee;
   color: #ccc;
-  cursor: auto;
+  cursor: auto; */
 }
