--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="hero">
+<div class="flex flex-col justify-between items-start p-10" *ngIf="hero">
   <h2>{{ hero.name | uppercase }} Details</h2>
   <div>id: {{ hero.id }}</div>
   <div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
   </div>
+  <button class="bg-slate-300" type="button" (click)="save()">save</button>
+  <button class="bg-slate-300" type="button" (click)="goBack()">go back</button>
 </div>
-<button type="button" (click)="save()">save</button>
-<button type="button" (click)="goBack()">go back</button>
