--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -8,11 +8,11 @@ label {
   margin-bottom: 0.5rem;
 }
 input {
-  padding: 0.5rem;
+  /* padding: 0.5rem;
   width: 100%;
   max-width: 600px;
   box-sizing: border-box;
-  display: block;
+  display: block; */
 }
 
 input:focus {
