--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -6,14 +6,14 @@ h2 {
 }
 
 .clear {
-  color: #333;
+  /* color: #333;
   background-color: #eee;
   margin-bottom: 12px;
   padding: 1rem;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 1rem; */
 }
 .clear:hover {
-  color: white;
-  background-color: #42545c;
+  /* color: white;
+  background-color: #42545c; */
 }
